# project-sgpp

./: package-lock.json  package.json  tailwind.config.js
migrations/2025-04-02-213330_create_estudiantes/: down.sql  up.sql
src/: App.jsx  BrowserRouters.jsx  main.jsx
src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
src-tauri/src/: main.rs  schema.rs
src-tauri/src/commands/: groups.rs  mod.rs  practices.rs  schools.rs  students.rs  teachers.rs
src-tauri/src/db/: connection.rs  models.rs  schema.rs
src-tauri/src/services/: user_services.rs
src/assets/: index.js
src/components/ButtonCreateStudent/: ButtonCreateStudent.jsx  CreateStudentModal.jsx
src/components/ButtonCreateTeacher/: ButtonCreateTeacher.jsx  CreateTeacherModal.jsx
src/components/EditControls/: EditControls.jsx
src/components/FilterBar/: FilterBar.jsx
src/components/GroupTable/: GroupTable.jsx
src/components/HighschoolTable/: HighschoolTable.jsx
src/components/Layout/: Layout.jsx  styles.js
src/components/PracticeHistory/: PracticeHistory.jsx
src/components/SchoolDetailsPage/: SchoolDetailsPage.jsx
src/components/Sidebar/: Sidebar.jsx
src/components/StudentDetailsModal/: StudentDetailsModal.jsx
src/components/StudentInfo/: StudentInfo.jsx
src/pages/: GroupCreate.jsx  GroupDetails.jsx  GroupsPage.jsx  HighSchoolsPage.jsx  HomePage.jsx  NewSchoolPage.jsx  PracticeCreate.jsx  PracticeDetails.jsx  StudentsPage.jsx  TeachersPage.jsx  ZoneSupervisors.jsx
src/styles/: globalStyles.js  sidebar.css
src/utils/: PDFComponent.jsx  generateCertificate.js
(+4 files in other folders)
